[package]
name = "kvs"
version = "0.1.0"
authors = ["Jing Ai <aijingyc@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.1"
predicates = "1.0.1"
structopt = "~0.3"
