[package]
name = "kvs"
version = "0.2.0"
authors = ["Jing Ai <aijingyc@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "0.11.1"
failure = "0.1.5"
predicates = "1.0.1"
serde = "1.0.100"
serde_json = "1.0.40"
structopt = "0.3.1"
tempfile = "3.1.0"
walkdir = "2.2.9"